[package]
name = "dynforest"
version = "0.2.0"
edition = "2021"
authors = ["schrodingerzhu <yifanzhu@rochester.edu>"]
description = "dynamic forest management"
license = "Apache-2.0"
keywords = ["splay", "graph", "connectivity", "forest", "tree"]
categories = ["algorithms", "data-structures", "no-std"]
homepage = "https://github.com/schrodingerzhu/dynforest"
repository = "https://github.com/schrodingerzhu/dynforest"
readme = "README.md"

[dev-dependencies]
rand = "0.8"